--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,1 +1,32 @@
 # This contains the nginx configuration information for a reverse proxy
+
+server {
+    listen 80;
+    server_name _;
+    location / {
+        # Forward application requests to the gunicorn server
+        proxy_pass http://flask-app:8000;
+
+        # Attach some header info
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /static {
+        # Handle static files directly, without forwarding to gunicorn
+        alias /static;
+        expires 30d;
+    }
+
+    location /socket.io {
+        # Tell WebSockets where to find socket.io connections
+        proxy_http_version 1.1;
+        proxy_buffering off;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_pass http://flask-app:8000/socket.io;
+    }
+
+}
