--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,1 +1,2 @@
-# This tells docker how to construct our prostgres container
+# This tells docker how to construct our postgres container
+FROM postgres:12-alpine
